--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -115,7 +115,7 @@ input, select, textarea {
 /* Type */
 
 	body, input, select, textarea {
-		color: rgba(255, 255, 255, 0.979);
+		color: rgba(255, 255, 255, 1);
 		font-family: Arial, Helvetica, sans-serif;
 		font-size: 16.5pt;
 		font-weight: normal;
@@ -3905,5 +3905,11 @@ input, select, textarea {
 			#intro {
 				background-attachment: scroll;
 			}
+		}
+		@media screen and (max-width: 500px) {
 
+			#intro {
+				background-attachment: scroll;
+				background-size: 120% 100%
+			}
 		}
