--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,7 +7,7 @@
 */
 
 html, body, div, span, applet, object,
-iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
+iframe, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
 code, del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var, b,
@@ -22,12 +22,18 @@ section, summary, time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;}
+	vertical-align: baseline;
+	text-align: justify;}
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;}
 
+h1 {
+	display: table; /* keep the background color wrapped tight */
+	margin: 0px auto 0px auto; /* keep the table centered */
+	padding:5px;font-size:20px;background-color:rgba(48, 46, 46, 0.671);;color:#ffffff;
+}
 body {
 	line-height: 1;
 }
@@ -1796,7 +1802,20 @@ input, select, textarea {
 		}
 
 /* Box */
-
+	.logo {
+		padding: 1.5em 1.5em 0.5em 1.5em ;
+		background: #31245000;
+		height: 17vh;
+		right: 0;
+		overflow-x: hidden;
+		overflow-y: auto;
+		position: fixed;
+		text-align: right;
+		top: 0;
+		width: 17vm;
+		z-index: 4;
+		cursor: pointer;
+	}
 	.box {
 		border-radius: 0.25em;
 		border: solid 1px rgba(255, 255, 255, 0.15);
@@ -1994,7 +2013,7 @@ input, select, textarea {
 	}
 
 		.features section {
-			padding: 3.5em 3em 1em 7em ;
+			padding: 2em 3em 1em 3.5em ;
 			width: 50%;
 			border-top: solid 1px rgba(255, 255, 255, 0.15);
 			position: relative;
@@ -2196,7 +2215,7 @@ input, select, textarea {
 		@media screen and (max-width: 736px) {
 
 			.features section {
-				padding: 2.5em 1.5em 0.1em 5.5em ;
+				padding: 2.5em 1.5em 0.1em 2.5em ;
 			}
 
 				.features section .icon {
@@ -3910,6 +3929,7 @@ input, select, textarea {
 
 			#intro {
 				background-attachment: scroll;
-				background-size: 120% 100%
+				background-size: 140% 100%
 			}
 		}
+	
