--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -200,6 +200,7 @@ input, select, textarea {
 			margin: 0 0 1.3em 0;
 			position: relative;
 			padding-bottom: 0.35em;
+			background-color: #5e42a600;
 		}
 
 			h1.major:after {
@@ -3932,4 +3933,6 @@ input, select, textarea {
 				background-size: 140% 100%
 			}
 		}
-	
+	.navbar {
+		padding-left:50px;
+	}
